--- a/package.json
+++ b/package.json
@@ -13,15 +13,32 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "bcryptjs": "^2.4.3",
     "chart.js": "^3.9.1",
+    "date-fns": "^2.29.2",
+    "firebase": "^9.9.4",
+    "querystring": "^0.2.1",
     "react": "^18.2.0",
+    "react-awesome-calendar": "^1.0.14",
+    "react-big-calendar": "^1.5.0",
     "react-chartjs-2": "^4.3.1",
+    "react-confirm-alert": "^3.0.6",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-donut": "^1.1.4",
+    "react-hot-toast": "^2.4.0",
     "react-minimal-pie-chart": "^8.3.0",
+    "react-moment": "^1.1.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
+    "react-scroll-to-bottom": "^4.2.0",
+    "react-time-picker": "^4.5.0",
+    "react-toastify": "^9.0.8",
+    "sass": "^1.54.9",
+    "socket.io-client": "^4.5.2",
     "styled-components": "^5.3.5",
+    "sweetalert2": "^11.4.29",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
